demo/traefikEE/k8s/webapp/webapp.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: webapp
  namespace: webapp
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp
        image: containous/webapp
        imagePullPolicy: IfNotPresent

---
apiVersion: v1
kind: Service
metadata:
  name: webapp
  namespace: webapp
  labels:
    app: webapp
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: webapp
  selector:
    app: webapp
