demo/traefikEE/k8s/webapp/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webapp
  namespace: webapp
  labels:
    app: webapp
  annotations:
    kubernetes.io/ingress.class: 'traefik'
spec:
  rules:
  - host: webapp.docker.localhost
    http:
      paths:
      - backend:
          serviceName: webapp
          servicePort: 80
